--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
   "scripts": {
     "start": "webpack-dev-server --mode development --open --port=8081"
   },
-  "author": "",
+  "author": "TutuTC",
   "license": "ISC"
 }
